# SEEGLocalization

./: CMakeLists.txt  README.md  SEEGLocalization.py
Resources/model/: model_contacts.onnx
SEEGLocalizationLib/: __init__.py  ai_detection.py  electrode_manager.py  export_manager.py
